<resources>
    <string name="app_name">Mahambara Cafe App</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cd_image_caffe_menu">Image Caffe Menu</string>
    <string name="dummy_menu_name">Menu Name</string>
    <string name="dummy_price">Rp.35000</string>
    <string name="menu_caffe">Menu Caffe</string>
    <string name="pesanan">Pesanan</string>
    <string name="dapur">Dapur</string>
    <string name="minuman">Minuman</string>
    <string name="dessert">Dessert</string>
    <string name="makanan">Makanan</string>
    <string name="hint_table">Masukkan nomor meja</string>
</resources>