<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.home.HomeActivity">

    <Button
        android:id="@+id/btnMenuCaffe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/menu_caffe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pesanan"
        app:layout_constraintEnd_toEndOf="@+id/btnMenuCaffe"
        app:layout_constraintStart_toStartOf="@+id/btnMenuCaffe"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuCaffe" />

    <Button
        android:id="@+id/btnKitchen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dapur"
        app:layout_constraintEnd_toEndOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="@+id/btnOrder"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder" />
</androidx.constraintlayout.widget.ConstraintLayout>