<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCaffeMenuPhoto"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tiramisu"
            android:contentDescription="@string/cd_image_caffe_menu" />

        <TextView
            android:id="@+id/tvCaffeMenuName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_menu_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivCaffeMenuPhoto"
            app:layout_constraintStart_toStartOf="@+id/ivCaffeMenuPhoto"
            app:layout_constraintTop_toBottomOf="@+id/ivCaffeMenuPhoto" />

        <TextView
            android:id="@+id/tvCaffeMenuDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dummy_description"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tvCaffeMenuName"
            app:layout_constraintStart_toStartOf="@+id/tvCaffeMenuName"
            app:layout_constraintTop_toBottomOf="@+id/tvCaffeMenuName" />

        <TextView
            android:id="@+id/tvCaffeMenuPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummy_price"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvCaffeMenuDescription"
            app:layout_constraintStart_toStartOf="@+id/tvCaffeMenuDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvCaffeMenuDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>