<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tiramisu" />

    <TextView
        android:id="@+id/tvCaffeMenuOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dummy_menu_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvMenuCaffeCategoryOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/makanan"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="@+id/tvCaffeMenuOrderName"
        app:layout_constraintTop_toBottomOf="@+id/tvCaffeMenuOrderName" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="Pesan"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMenuCaffePriceOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvMenuCaffeCategoryOrder"
        app:layout_constraintStart_toStartOf="@+id/tvMenuCaffeCategoryOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvMenuCaffeCategoryOrder" />
</androidx.constraintlayout.widget.ConstraintLayout>